--- a/unit_3/style.css
+++ b/unit_3/style.css
@@ -1,9 +1,14 @@
+title{
+	text-align: center;
+	color: #fff;
+	font-size: 50px;
+	font-weight: 600;
+}
 h1 {
 	text-align: center;
 }
 body {
 	text-align: center;
-	background: url(images/SofiaQin.jpg);
 	background-size: cover;
 	color: #fff;
 	font-family: Helvetica;
@@ -16,5 +21,5 @@ p{
 }
 #slogan{
 	text-align: center;
-	color: 0,0,25;
+	color: 0,0,255;
 }
